@@ -89,6 +89,7 @@ c_headers = files(
   'include/serd/string_view.h',
   'include/serd/syntax.h',
   'include/serd/uri.h',
+  'include/serd/world.h',
   'include/serd/writer.h',
 )
 
@@ -103,6 +104,7 @@ sources = files(
   'src/syntax.c',
   'src/system.c',
   'src/uri.c',
+  'src/world.c',
   'src/writer.c',
 )
 
