@@ -12,6 +12,7 @@
 #include "serd/stream.h"
 #include "serd/string_view.h"
 #include "serd/syntax.h"
+#include "serd/world.h"
 #include "serd/writer.h"
 
 #ifdef _WIN32
@@ -78,7 +79,7 @@ missing_arg(const char* const name, const char opt)
 }
 
 static SerdStatus
-quiet_error_sink(void* const handle, const SerdError* const e)
+quiet_error_func(void* const handle, const SerdError* const e)
 {
   (void)handle;
   (void)e;
@@ -253,20 +254,20 @@ main(int argc, char** argv)
     base = serd_new_file_uri(serd_string(input), serd_empty_string());
   }
 
-  FILE* const    out_fd = stdout;
-  SerdEnv* const env =
+  FILE* const      out_fd = stdout;
+  SerdWorld* const world  = serd_world_new();
+  SerdEnv* const   env =
     serd_env_new(base ? serd_node_string_view(base) : serd_empty_string());
 
-  SerdWriter* writer = serd_writer_new(
-    output_syntax, writer_flags, env, (SerdWriteFunc)fwrite, out_fd);
+  SerdWriter* const writer = serd_writer_new(
+    world, output_syntax, writer_flags, env, (SerdWriteFunc)fwrite, out_fd);
 
   SerdReader* const reader =
-    serd_reader_new(input_syntax, serd_writer_sink(writer), stack_size);
+    serd_reader_new(world, input_syntax, serd_writer_sink(writer), stack_size);
 
   serd_reader_set_strict(reader, !lax);
   if (quiet) {
-    serd_reader_set_error_sink(reader, quiet_error_sink, NULL);
-    serd_writer_set_error_sink(writer, quiet_error_sink, NULL);
+    serd_world_set_error_func(world, quiet_error_func, NULL);
   }
 
   if (root_uri) {
@@ -302,6 +303,7 @@ main(int argc, char** argv)
   serd_writer_free(writer);
   serd_env_free(env);
   serd_node_free(base);
+  serd_world_free(world);
 
   if (fclose(stdout)) {
     perror("serdi: write error");
