@@ -8,6 +8,7 @@
 #include "serd/node.h"
 #include "serd/reader.h"
 #include "serd/sink.h"
+#include "serd/world.h"
 #include "serd/writer.h"
 
 #include <stddef.h>
@@ -17,6 +18,7 @@ main(void)
 {
   serd_free(NULL);
   serd_node_free(NULL);
+  serd_world_free(NULL);
   serd_env_free(NULL);
   serd_sink_free(NULL);
   serd_reader_free(NULL);
